# thmanyah-ML-Customer-Churn

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
api/: __init__.py  main.py
configs/: monitoring.yaml  training.yaml
docs/: TECHNICAL_REPORT.md
docs/charts/: feature_differences.csv  summary.json
scripts/: analysis.py  monitor.py  retrain.py  train.py
src/churn_pipeline/: config.py  data_loader.py  evaluation.py  features.py
src/thmanyah_ml_customer_churn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_features.py
web/: package.json  pnpm-lock.yaml  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: charts.tsx
web/components/ui/: button.tsx
