[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thmanyah-ml-customer-churn"
version = "0.1.0"
description = "Customer churn prediction pipeline with monitoring and API serving."
authors = [
  { name = "Thmanyah ML Team" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pandas>=2.1.0",
  "numpy>=1.25.0",
  "scikit-learn>=1.3.0",
  "mlflow>=2.9.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.0",
  "joblib>=1.3.0",
  "matplotlib>=3.8.0",
  "scipy>=1.11.0"
]

[project.optional-dependencies]
dev = [
  "black>=23.12.0",
  "ruff>=0.2.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pre-commit>=3.5.0"
]

[tool.uv]
managed = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=churn_pipeline --cov-report=term-missing"
testpaths = ["tests"]
